-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.7.0
-
None
-
c6a2a9ed4 (dev), dbeed33d4 (6.6), 33b0e25de (6.5), f79632747 (tqtc/lts-6.2)
Our Qt Quick Calqlatr example (http://doc.qt.io/qt-5/qtquick-demos-calqlatr-example.html ) has been done in the very early days of QML and does not properly reflect the current way of using Qt Quick. It should be re-done to serve as a proper example of how to use Qt Quick and Qt Quick Controls 2.
The rewritten example should show how to properly make Qt Quick apps scalable to different resolutions, leverage Qt Quick Controls 2 with perhaps some custom bitmaps in order to look cool, and also be properly toolable with Qt Quick Designer.
- relates to
-
QTBUG-96460 calqlatr example
-
- Closed
-
-
QTBUG-95722 Use Qt Quick Controls 2 in examples written in Qt Quick
-
- Closed
-
For Gerrit Dashboard: QTBUG-54267 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
163251,1 | WIP: Calqlatr example | dev | qt/qtquickcontrols2 | Status: DEFERRED | -2 | 0 |
357426,2 | ListModel: Fix accessing empty strings in ListElement | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
357479,4 | ListModel: Fix accessing empty strings in ListElement | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
357587,1 | ListModel: Fix accessing empty strings in ListElement | 6.1 | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
508650,6 | Improve calqlatr example | dev | qt/qtdoc | Status: MERGED | +2 | 0 |
509995,2 | Improve calqlatr example | 6.6 | qt/qtdoc | Status: MERGED | +2 | 0 |
510110,2 | Improve calqlatr example | 6.5 | qt/qtdoc | Status: MERGED | +2 | 0 |
510178,3 | Improve calqlatr example | tqtc/lts-6.2 | qt/tqtc-qtdoc | Status: MERGED | +2 | 0 |