ListModel: Fix accessing empty strings in ListElement

We store empty strings as null strings in StringOrTranslation;
consequently isSet will return false for such a string. However, we
still know that we are storing a string, and therefore need to return
a QVariant containing an empty string, instead of a null QVariant.
Amends 5022b91b31370e2afde0426f94ff2ce6843b92e6.

This fixes the "undefined" warning in Calqlatr (but changes nothing
about the fact that the example isn't reflective of modern QML
practices).

Task-number: QTBUG-54267
Change-Id: I83d871a79cd2bc0484f0eaf62d4ca345e39218aa
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 9be6a9327af1ac96bccca087ef24100d89a5f8c5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>